--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,70 @@ h1{
     text-align: center;
     margin-left: 38%;
 }
+
+.titleQns{
+    font-weight: bold;
+}
+
+.container {
+    max-width: 300px;
+    margin: 50px auto;
+    text-align: left;
+    font-family: sans-serif;
+}
+select {
+    width: 100%;
+    min-height: 150px;
+    margin-bottom: 20px;
+}
+input[type="submit"] {
+    display: block;
+    margin: 20px auto;
+}
+label {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    font-size: 18px;
+    margin-bottom: 15px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+label input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+.select {
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    position: absolute;
+    border-radius: 50%;
+    background-color: #cccccc;
+}
+label:hover input~.select {
+    background-color: #ccc;
+}
+label input:checked~.select {
+    background-color: #1A33FF;
+}
+.select:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+label input:checked~.select:after {
+    display: block;
+}
+label .select:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+}
