Main result flow working. Left leaderboard writing

--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,8 @@ label .select:after {
     border-radius: 50%;
     background: white;
 }
+
+.tablequiz{
+    width: 60%;
+    margin-left: 20%;
+}
